Added Header Section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
     <title>Kids School</title>
     <link rel="stylesheet" href="./styles.css/style.css">
 </head>
-<body>
-    
+<body class="quicksand-font">
+    <header>
+        <div class="fixed_container">
+            <nav class="d_flex space_between align_center">
+                <div class="brands d_flex align_center">
+                    <div class="brands_img">
+                        <img src="./images/logo.png" alt="">
+                    </div>
+                    <div class="brands_name">
+                        <h1>SCHOOL</h1>
+                    </div>
+                </div>
+                <div class="main_menu">
+                    <ul class="d_flex">
+                        <li><a href="#" class="primary_color">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Facilities</a></li>
+                        <li><a href="#">Admission</a></li>
+                    </ul>
+                </div>
+                <div class="nav_btn">
+                    <button class="primary_btn">contact</button>
+                </div>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
