Added Hero Section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css/style.css">
 </head>
 <body class="quicksand-font">
+    <!-- Header Section  -->
     <header>
         <div class="fixed_container">
             <nav class="d_flex space_between align_center">
@@ -32,5 +33,27 @@
             </nav>
         </div>
     </header>
+    <main>
+        <!-- Hero Section  -->
+        <sectioin class="hero_section">
+            <div class="fixed_container">
+                <div class="hero_content d_flex space_between">
+                    <div class="hero_left">
+                        <h1><span class="primary_color empower">Empowering</span>
+                            students from small age <span class="secondary_color">towards vision</span></h1>
+                            <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                            <div class="hero_btn">
+                                <button class="primary_btn">Enroll Now</button>
+                            </div>
+                    </div>
+                    <div class="hero-right">
+                        <div class="hero_img d_flex">
+                            <img src="./images/hero-kids.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </sectioin>
+    </main>
 </body>
 </html>
