--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
+    <!-- Font Awesome CDN  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <link rel="stylesheet" href="./styles.css/style.css">
 </head>
 <body class="quicksand-font">
@@ -30,30 +34,31 @@
                 <div class="nav_btn">
                     <button class="primary_btn">contact</button>
                 </div>
+                <div class="menu_icon">
+                    <span><i class="fa-solid fa-bars"></i></span>
+                </div>
             </nav>
         </div>
     </header>
-    <main>
-        <!-- Hero Section  -->
-        <sectioin class="hero_section">
-            <div class="fixed_container">
-                <div class="hero_content d_flex space_between">
-                    <div class="hero_left">
-                        <h1><span class="primary_color empower">Empowering</span>
-                            students from small age <span class="secondary_color">towards vision</span></h1>
-                            <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
-                            <div class="hero_btn">
-                                <button class="primary_btn">Enroll Now</button>
-                            </div>
-                    </div>
-                    <div class="hero-right">
-                        <div class="hero_img d_flex">
-                            <img src="./images/hero-kids.png" alt="">
+    <!-- Hero Section  -->
+    <sectioin class="hero_section">
+        <div class="fixed_container">
+            <div class="hero_content d_flex space_between">
+                <div class="hero_left">
+                    <h1><span class="primary_color empower">Empowering</span>
+                        students from small age <span class="secondary_color">towards vision</span></h1>
+                        <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                        <div class="hero_btn">
+                            <button class="primary_btn">Enroll Now</button>
                         </div>
+                </div>
+                <div class="hero-right">
+                    <div class="hero_img d_flex">
+                        <img src="./images/hero-kids.png" alt="">
                     </div>
                 </div>
             </div>
-        </sectioin>
-    </main>
+        </div>
+    </sectioin>
 </body>
 </html>
