--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </header>
     <!-- Hero Section  -->
-    <sectioin class="hero_section">
+    <section id="hero_section">
         <div class="fixed_container">
             <div class="hero_content d_flex space_between">
                 <div class="hero_left">
@@ -59,6 +59,53 @@
                 </div>
             </div>
         </div>
-    </sectioin>
+    </section>
+
+    <!-- Corriculam Section  -->
+    <Section id="corriculam_section">
+        <div class="fixed_container">
+            <div class="corriculam_title">
+                <h1 class="title_size">Standard Curriculum</h1>
+            </div>
+            <div class="corriculam_card d_flex space_between">
+                <div class="corriculam_item">
+                    <div class="item_img">
+                        <img src="./images/kinder.png" alt="">
+                    </div>
+                    <div class="item_text">
+                        <h2 class="dark_2">Kinder (3-6) Years</h2>
+                        <p class="dark_3">
+                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient
+                        </p>
+                        <button type="button">Read More</button>
+                    </div>
+                </div>
+                <div class="corriculam_item">
+                    <div class="item_img">
+                        <img src="./images/elementary.png" alt="">
+                    </div>
+                    <div class="item_text">
+                        <h2 class="dark_2">Elementary School</h2>
+                        <p class="dark_3">
+                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient
+                        </p>
+                        <button type="button">Read More</button>
+                    </div>
+                </div>
+                <div class="corriculam_item">
+                    <div class="item_img">
+                        <img src="./images/middle.png" alt="">
+                    </div>
+                    <div class="item_text">
+                        <h2 class="dark_2">Middle (10-16) Years</h2>
+                        <p class="dark_3">
+                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient
+                        </p>
+                        <button type="button">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </Section>
 </body>
 </html>
