Added Corriculam Cirlce Button

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
                     </div>
                 </div>
             </div>
+            <div class="corriculam_circle_btn d_flex">
+                <div class="corri_btn">
+                    <i class="fa-solid fa-angle-left"></i>
+                </div>
+                <div class="corri_btn">
+                    <i class="fa-solid fa-angle-right"></i>
+                </div>
+            </div>
         </div>
     </Section>
 </body>
