Added Stories Section With Full Responsive

--- a/index.html
+++ b/index.html
@@ -115,5 +115,61 @@
             </div>
         </div>
     </Section>
+
+    <!-- Stories Section  -->
+    <section class="stories_section">
+        <div class="fixed_container">
+            <div class="stories_titel">
+                <h1 class="title_size">Our Stories</h1>
+            </div>
+            <div class="stories_card">
+                <div class="stories_item item_1">
+                    <div class="stories_img">
+                        <img src="./images/story-1.png" alt="">
+                    </div>
+                    <div class="stories_text">
+                        <h2>A fun toddler coloring training on classroom</h2>
+                        <p>Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+                    </div>
+                </div>
+                <div class="stories_item item_2">
+                    <div class="stories_img">
+                        <img src="./images/story-2.png" alt="">
+                    </div>
+                    <div class="stories_text">
+                        <h2>Find out if a school fits the
+                            family’s needs</h2>
+                    </div>
+                </div>
+                <div class="stories_item item_3">
+                    <div class="stories_img">
+                        <img src="./images/story-2.png" alt="">
+                    </div>
+                    <div class="stories_text">
+                        <h2>Find out if a school fits the
+                            family’s needs</h2>
+                    </div>
+                </div>
+                <div class="stories_item item_4">
+                    <div class="stories_img">
+                        <img src="./images/story-2.png" alt="">
+                    </div>
+                    <div class="stories_text">
+                        <h2>Find out if a school fits the
+                            family’s needs</h2>
+                    </div>
+                </div>
+                <div class="stories_item item_5">
+                    <div class="stories_img">
+                        <img src="./images/story-2.png" alt="">
+                    </div>
+                    <div class="stories_text">
+                        <h2>Find out if a school fits the
+                            family’s needs</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
