Added Footer Section with Responsive

--- a/index.html
+++ b/index.html
@@ -137,39 +137,101 @@
                         <img src="./images/story-2.png" alt="">
                     </div>
                     <div class="stories_text">
-                        <h2>Find out if a school fits the
-                            family’s needs</h2>
+                        <h2>Find out if a school fits the family’s needs</h2>
                     </div>
                 </div>
                 <div class="stories_item item_3">
                     <div class="stories_img">
-                        <img src="./images/story-2.png" alt="">
+                        <img src="./images/story-3.png" alt="">
                     </div>
                     <div class="stories_text">
-                        <h2>Find out if a school fits the
-                            family’s needs</h2>
+                        <h2>Summer math & literacy
+                            centres for kids</h2>
                     </div>
                 </div>
                 <div class="stories_item item_4">
                     <div class="stories_img">
-                        <img src="./images/story-2.png" alt="">
+                        <img src="./images/story-4.png" alt="">
                     </div>
                     <div class="stories_text">
-                        <h2>Find out if a school fits the
-                            family’s needs</h2>
+                        <h2>Classroom management
+                            techniques for new tutors</h2>
                     </div>
                 </div>
                 <div class="stories_item item_5">
                     <div class="stories_img">
+                        <img src="./images/story-5.png" alt="">
+                    </div>
+                    <div class="stories_text">
+                        <h2>Conversation rhymes
+                            improve kids listening</h2>
+                    </div>
+                </div>
+                <div class="stories_item item_hide">
+                    <div class="stories_img">
                         <img src="./images/story-2.png" alt="">
                     </div>
                     <div class="stories_text">
-                        <h2>Find out if a school fits the
-                            family’s needs</h2>
+                        <h2>Find out if a school fits the family’s needs</h2>
+                    </div>
+                </div>
+                <div class="stories_item item_hide">
+                    <div class="stories_img">
+                        <img src="./images/story-3.png" alt="">
+                    </div>
+                    <div class="stories_text">
+                        <h2>Summer math & literacy
+                            centres for kids</h2>
                     </div>
                 </div>
             </div>
+            <div class="stories_btn">
+                <button class="primary_btn">View All</button>
+            </div>
         </div>
     </section>
+
+
+    <footer>
+        <!-- footer Section -->
+        <section class="footer_section">
+            <div class="fixed_container">
+                <div class="footer_info d_flex space_between">
+                    <div class="footer_item item_1">
+                        <div class="footer_logo d_flex">
+                            <img src="./images/logo.png" alt="">
+                            <h1>Kids Educations</h1>
+                        </div>
+                        <div class="footer_des">
+                            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                        </div>
+                    </div>
+                    <div class="footer_item item_2">
+                        <div class="footer_menu">
+                            <h2>About School</h2>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Facilities</a></li>
+                                <li><a href="#">Admission</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer_item item_3">
+                        <h1>Keep in Touch</h1>
+                        <div class="footer_icon">
+                            
+                            <ul class="d_flex">
+                                <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
