--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                         <h2>A fun toddler coloring training on classroom</h2>
                         <p>Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
                     </div>
+                    <div class="fload_stories">
+                        <p>September 10, 2019</p>
+                    </div>
                 </div>
                 <div class="stories_item item_2">
                     <div class="stories_img">
@@ -138,6 +141,9 @@
                     </div>
                     <div class="stories_text">
                         <h2>Find out if a school fits the family’s needs</h2>
+                    </div>
+                    <div class="fload_stories">
+                        <p>September 10, 2019</p>
                     </div>
                 </div>
                 <div class="stories_item item_3">
@@ -148,6 +154,9 @@
                         <h2>Summer math & literacy
                             centres for kids</h2>
                     </div>
+                    <div class="fload_stories">
+                        <p>September 10, 2019</p>
+                    </div>
                 </div>
                 <div class="stories_item item_4">
                     <div class="stories_img">
@@ -156,6 +165,9 @@
                     <div class="stories_text">
                         <h2>Classroom management
                             techniques for new tutors</h2>
+                    </div>
+                    <div class="fload_stories">
+                        <p>September 10, 2019</p>
                     </div>
                 </div>
                 <div class="stories_item item_5">
@@ -166,6 +178,9 @@
                         <h2>Conversation rhymes
                             improve kids listening</h2>
                     </div>
+                    <div class="fload_stories">
+                        <p>September 10, 2019</p>
+                    </div>
                 </div>
                 <div class="stories_item item_hide">
                     <div class="stories_img">
@@ -173,6 +188,9 @@
                     </div>
                     <div class="stories_text">
                         <h2>Find out if a school fits the family’s needs</h2>
+                    </div>
+                    <div class="fload_stories">
+                        <p>September 10, 2019</p>
                     </div>
                 </div>
                 <div class="stories_item item_hide">
@@ -182,6 +200,9 @@
                     <div class="stories_text">
                         <h2>Summer math & literacy
                             centres for kids</h2>
+                    </div>
+                    <div class="fload_stories">
+                        <p>September 10, 2019</p>
                     </div>
                 </div>
             </div>
