--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
                         <div class="footer_icon">
                             
                             <ul class="d_flex">
-                                <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+                                <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+                                <li><a href="https://www.x.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="https://www.pinterest.com" target="_blank"><i class="fa-brands fa-pinterest"></i></a></li>
+                                <li><a href="https://www.google.com" target="_blank"><i class="fa-brands fa-google-plus-g"></i></a></li>
                             </ul>
                         </div>
                     </div>
