Expolre Marquee Tag

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
             </nav>
         </div>
     </header>
-    <!-- Hero Section  -->
+    <main>
+        <!-- Hero Section  -->
     <section id="hero_section">
+        <marquee scrollamount="15" behavior="alternate" loop="5">Welcome to Our Site</marquee>
         <div class="fixed_container">
             <div class="hero_content d_flex space_between">
                 <div class="hero_left">
@@ -211,6 +213,7 @@
             </div>
         </div>
     </section>
+    </main>
 
 
     <footer>
